--- a/main.html
+++ b/main.html
@@ -8,6 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header class="header">
+		<div>
+		<h2>Shaw's News</h2>
+		</div>
+	</header>
+    <main>
+		<div class="latest-news-section">
+			<h3>Latest News Articles</h3>
+			<ul>
+				<li>Article 1</li>
+				<li>Article 2</li>
+				<li>Article 3</li>
+			</ul>
+		</div>
+		<div class="main-article">
+			<h3>Main Article</h3>
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto enim voluptas, iste omnis laborum excepturi voluptatem dolorum ad mollitia aliquam asperiores ea voluptatum quis aspernatur natus praesentium amet animi harum cum corrupti dicta! Laborum, temporibus earum. Tempore voluptate inventore possimus consectetur repellat exercitationem dolorum, iusto perspiciatis vitae voluptatibus eos ducimus!</p>
+		</div>
+		<div class="pictorial-news-section">
+			<h3>Pictorial News</h3>
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="pic-1" />
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="pic-2" />
+			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="pic-3" />
+		</div>
+	</main>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
